# simple_hardware_interface

./: CHANGELOG.rst  CMakeLists.txt  Doxyfile  LICENSE  README.MD  package.xml
arduinoSketches/arduino_hwi_base_due_ti/: arduino_hwi_base_due_ti.ino
arduinoSketches/arduino_hwi_base_mega_ti/: arduino_hwi_base_mega_ti.ino  config.h
config/: arduino_parameters.yaml
doc/: create_doc.sh
doc/dox/: usage_configuration.dox
include/: arduinoSerial.h  hardware_interface.h
launch/: hardware_interface.launch
src/: arduinoSerial.cpp  hardware_interface.cpp  stand_alone_spin.cpp
src-tests/: test_publisher.cpp
