<?xml version="1.0"?>
<package format="2">
  <name>hardware_interface_sonar</name>

  <version>0.0.18</version>

  <description>The hardware_interface_sonar package</description>

  <maintainer email="angelos.plastropoulos@innotecuk.com">Angelos Plastropoulos</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>

  <export>
  </export>

</package>
